	To facilitate debugging, change "unsigned" to explicit "unsigned int".

	* src/hidden3d.c (sort_edges_by_z sort_polys_by_z):
	Remove incorrect cast to (unsigned long).

	* src/axis.h src/graphics.c src/plot2d.c(store2d_point eval_plots):
	Remove a few more signed/unsigned incompatibilities. Declare variables
	as coord_type rather than int when appropriate.

	* docs/href.c(parse) docs/doc2ipf.c(process_line): Null-terminate
	allocated string. Do not walk off the end of a null-terminated string.
	Bug #1900987

2008-02-23  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/faq-ja.tex:  Translation of revision 1.37

2008-02-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c: #include "readline.h"

	* demo/circles.dem demo/html/Makefile demo/html/index.save:
	Include circles.dem in the set of web demos.

2008-02-23  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/os2/gclient.c: Use the font palette dialog instead of the standard
	font selection dialog. Still switcheable via #define STANDARD_FONT_DIALOG.
	SF #1773922 OS/2 PM-Termial broken font selection by Franz Bakan.

	* config/makefile.cyg: Added GNUPLOT_PS_DIR and WIN_IPC.

	* config/makefile.dj2 config/makefile.os2: Added GNUPLOT_PS_DIR.

	* config/makefile.mgw: Added WIN_IPC.

	* config/makefile.nt: Added GIF_ANIMATION.

	* config/configh_strip4compare.sh: New helper script to facilitate
	comparison of ./configure'd src/config.h and config/config.xxx.

	* config/config.cyg config/config.dj2 config/config.mgw config/config.nt
	config/config.os2: Updated according to config.h from ./configure and by
	means of config_strip.sh.

2008-02-22  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pslatex.trm:  Include entry point PS_path in the terminal tables
	for epslatex, pslatex, and pstex.  This fixes a bug due to the code in
	color.c:draw_inside_color_smooth_box_postscript() not being able to sync
	with the code in the terminal driver.
